fixed toolbar, no longer goes out of bounds

--- a/client/src/assets/css/notes.css
+++ b/client/src/assets/css/notes.css
@@ -4,8 +4,8 @@
 }
 
 .toolbar {
-    position: fixed;
-    width: 90%;
+    position: relative;
+    width: 100%;
     height: 75px;
     padding: 5px 0 0 15px;
     background-color: #31C3E7;
